# clean-db1-bringup

./: .clang-format  CLAUDE.md  README.md  WindowsBuildReadme.md  requirements.txt  sai.patch  west.yml
.github/workflows/: README.md  build.yml
_.vscode/: extensions.json  launch.json  settings.json
app/: CMakeLists.txt  Kconfig  build.bat  build.sh  buildfresh.bat  flash.bat  flash.sh  prj.conf  requirements.txt
app/boards/: db1_mcxn947_cpu0.conf  db1_mcxn947_cpu0.overlay  frdm_mcxn947_mcxn947_cpu0.conf
app/cmake/: protobuf.cmake
app/img/: Stowood-logo-30-years-220422a-mini-green.c
app/proto/: BFP.options  BFP.proto  BFP_proto_rev.h
app/src/: als.c  als.h  audio.c  audio.h  boot_id.c  boot_id.h  debug_leds.c  debug_leds.h  display.c  display.h  exg.c  exg.h  fuel_gauge.c  fuel_gauge.h  gpio_init.c  gpio_init.h  gsm.c  gsm.h  handle_fatal.c  img.h  imu.c  imu.h  led_manager.c  led_manager.h  main.c  modem.c  modem.h  power.c  power.h  pressure.c  pressure.h  process_storage.c  process_storage.h  processor.c  processor.h  rip.c  rip.h  sample_timer.c  sample_timer.h  storage.c  (+11 more)
artefacts/: README.md  logo.ppm  test_logo.h
artifacts/: simple_img2c.py  test_logo.c
boards/stowood/db1/: Kconfig  Kconfig.db1  Kconfig.defconfig  Kconfig.sysbuild  board.c  board.cmake  board.yml  db1-pinctrl.dtsi  db1.dtsi  db1_mcxn947_cpu0.dts  db1_mcxn947_cpu0.dtsi  db1_mcxn947_cpu0.yaml  db1_mcxn947_cpu0_62_2_1.overlay  db1_mcxn947_cpu0_qspi.dts  db1_mcxn947_cpu0_qspi.yaml  db1_mcxn947_cpu0_qspi_defconfig  db1_mcxn947_cpu1.dts  db1_mcxn947_cpu1.yaml  db1_mcxn947_cpu1_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/audio/: CMakeLists.txt  Kconfig  max9867.c  max9867.h  max9867_utils.h
drivers/audio/max9867/: CMakeLists.txt  max9867.c  max9867.h  max9867_private.h  max9867_reg.h  max9867_utils.c  max9867_utils.h
drivers/i2s/: CMakeLists.txt  Kconfig
drivers/i2s/ads1298/: CMakeLists.txt  Kconfig  ads1298_i2s.c  ads1298_i2s.h  ads1298_reg.h  ads1298_utils.c  ads1298_utils.h
drivers/i2s/copy_ads1298/: CMakeLists.txt  Kconfig  ads1298_i2s.c  ads1298_i2s.h
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/abp2s/: CMakeLists.txt  Kconfig  abp2_bits.h  abp2s.c  abp2s.h  abp2s_utils.c  abp2s_utils.h  check_status.c  check_status.h
drivers/sensor/ads1298/: CMakeLists.txt  Kconfig  ads1298.c  ads1298.h
drivers/sensor/adt7310/: adt7310.c
drivers/sensor/veml6030/: CMakeLists.txt  Kconfig  veml6030.c  veml6030.h
dts/bindings/audio/: maxim,max9867.yaml
dts/bindings/i2s/: ti,ads1298_i2s.yaml
dts/bindings/sensor/: honeywell,abp2s.yaml  ti,ads1298.yaml  vishay,veml6030.yaml
include/app/drivers/: ads1298_public.h  exg_conf.h
samples/fs_sample/: STOWOOD_README.rst  prj.conf  prj_ext.conf
samples/fs_sample/boards/: frdm_mcxn947_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0.overlay
samples/fs_sample/src/: main.c
samples/usb-mass/: prj.conf
samples/usb-mass-min/: Kconfig
samples/usb-mass-min/boards/: db1_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0.overlay
samples/usb-mass-min/src/: main.c
samples/usb-mass/boards/: db1_mcxn947_cpu0.conf
samples/usb-mass/src/: main.c
samples/usb-test/: CMakeLists.txt  prj.conf  sample.yaml
samples/usb-test/boards/: db1_mcxn947_cpu0.overlay
samples/usb-test/src/: main.c
scripts/: build.py  lint.py  list_revisions.py  requirements.txt  run-clang-format.py  setup_debug.sh  setup_env.py  setup_env.sh  setup_toolchain.py  west-commands.yml  windows_setup_toolchain.py
tests/codec/: CMakeLists.txt
tests/codec/src/: main.c
tests/codec_integration/: CMakeLists.txt  prj.conf  test.sh
tests/codec_integration/src/: main.c
tests/exg/: CMakeLists.txt  test.sh  testcase.yaml
tests/exg/src/: main.c
tests/pressure_sensor/: CMakeLists.txt  prj.conf  test.sh  testcase.yaml
tests/pressure_sensor/src/: main.c
tests/pressure_status/: CMakeLists.txt
tests/pressure_status/src/: main.c
