cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(pressure_sensor_test)

target_include_directories(app PRIVATE ../../drivers/sensor/abp2s/)
target_sources(app PRIVATE src/main.c)
target_sources(app PRIVATE ../../drivers/sensor/abp2s/abp2s_utils.c)
